# GW-April

./: .editorconfig  .gitignore  .gitmodules  April.vcxproj  CMakeLists.txt  GW-April.sln  Injector.au3  README.md
Source/: DllMain.cpp
Source/April/Config/Gui/: ChainedSoulInfo.config.cpp  ChainedSoulInfo.config.hpp  DhuumBotGui.config.cpp  DhuumBotGui.config.hpp  DhuumInfo.config.cpp  DhuumInfo.config.hpp  Dialogs.config.cpp  Dialogs.config.hpp  HealthEnergy.config.cpp  HealthEnergy.config.hpp  InstanceTimer.config.cpp  InstanceTimer.config.hpp  Inventory.config.cpp  Inventory.config.hpp  Settings.config.cpp  Settings.config.hpp  Skillbar.config.cpp  Skillbar.config.hpp  TargetInfo.config.cpp  TargetInfo.config.hpp  UwTimesGui.config.cpp  UwTimesGui.config.hpp
Source/April/Config/Module/: AgentFilter.config.cpp  AgentFilter.config.hpp  ChatCommands.config.cpp  ChatCommands.config.hpp  ChatFilter.config.cpp  ChatFilter.config.hpp  ConsumablesMgr.config.cpp  ConsumablesMgr.config.hpp  NotifyEffectLost.config.cpp  NotifyEffectLost.config.hpp
Source/April/Framework/: Command.cpp  Command.h  Initialization.cpp  Initialization.h  Instance.OnCommand.cpp  Instance.OnCommand.hpp  Instance.cpp  Instance.h  Modules.cpp  Modules.h  WndProc.cpp  WndProc.h
Source/April/Gui/: ChainedSoulInfo.cpp  ChainedSoulInfo.h  DhuumBotGui.cpp  DhuumBotGui.h  DhuumInfo.cpp  DhuumInfo.h  Dialogs.cpp  Dialogs.h  HealthEnergy.cpp  HealthEnergy.h  InstanceTimer.cpp  InstanceTimer.h  Inventory.StateToColor.hpp  Inventory.cpp  Inventory.h  Settings.cpp  Settings.h  Skillbar.cpp  Skillbar.h  TargetInfo.cpp  TargetInfo.h  UwTimes.cpp  UwTimes.h
Source/April/Module/: AgentFilter.cpp  AgentFilter.h  ChainedSoul.cpp  ChainedSoul.h  ChatCommands.cpp  ChatCommands.h  ChatFilter.cpp  ChatFilter.h  ConsumablesMgr.AllowUse.hpp  ConsumablesMgr.cpp  ConsumablesMgr.h  CursorFix.cpp  CursorFix.h  DhuumBot.cpp  DhuumBot.h  DhuumsJudgement.cpp  DhuumsJudgement.h  NotifyEffectLoss.cpp  NotifyEffectLoss.h  ReturnToOutpost.cpp  ReturnToOutpost.h  ShowKitUses.cpp  ShowKitUses.h  SuppressSpeechBubbles.cpp  SuppressSpeechBubbles.h  UwTimer.cpp  UwTimer.h  WindowManager.cpp  WindowManager.h
Source/April/Utility/: ConfigAssert.cpp  ConfigAssert.h  Consumable.cpp  Consumable.h  ConsumableState.cpp  ConsumableState.h  DrawStructures.cpp  DrawStructures.h  FileIO.cpp  FileIO.h  TimeFormatting.cpp  TimeFormatting.h  UwReaper.cpp  UwReaper.h  stl.h  unique_vector.cpp  unique_vector.h
Source/Dependencies/: GWCA.cpp  GWCA.hpp  ImGui.config.hpp  ImGui.cpp  ImGui.hpp
data/Fonts/: README.md
extras/Injector/: Injector.au3
extras/Installer/: Installer.au3
extras/Installer/data/: README.md
src/: DllMain.cpp
src/April/Framework/: Features.cpp  Features.h  WndProc.cpp  WndProc.h
src/April/Gui/: ChainedSouls.cpp  ChainedSouls.h  DhuumInfo.cpp  DhuumInfo.h  HealthEnergy.cpp  HealthEnergy.h  InstanceTimer.cpp  InstanceTimer.h  Inventory.cpp  Inventory.h  Settings.Config.cpp  Settings.Config.h  Settings.cpp  Settings.h  Skillbar.cpp  Skillbar.h  UwTimer.cpp  UwTimer.h
src/April/Gui/Settings/: Settings.ChatCommands.cpp  Settings.ChatCommands.h  Settings.ChatFilter.cpp  Settings.ChatFilter.h  Settings.DefaultTheme.cpp  Settings.DefaultTheme.h  Settings.DhuumBot.cpp  Settings.DhuumBot.h  Settings.Dialogs.cpp  Settings.Dialogs.h  Settings.Generic.cpp  Settings.Generic.h  Settings.GuildEditor.cpp  Settings.GuildEditor.h  Settings.HealthEnergy.cpp  Settings.HealthEnergy.h  Settings.InstanceTimer.cpp  Settings.InstanceTimer.h  Settings.Inventory.cpp  Settings.Inventory.h  Settings.ItemFilter.cpp  Settings.ItemFilter.h  Settings.NotifyOnEffect.cpp  Settings.NotifyOnEffect.h  Settings.ResignLog.cpp  Settings.ResignLog.h  Settings.Settings.cpp  Settings.Settings.h  Settings.ShowKitUses.cpp  Settings.ShowKitUses.h  Settings.Skillbar.cpp  Settings.Skillbar.h  Settings.TargetInfo.cpp  Settings.TargetInfo.h
src/April/Module/: ChatCommands.cpp  ChatCommands.h  ChatFilter.cpp  ChatFilter.h  ConsumablesMgr.cpp  ConsumablesMgr.h  DhuumBot.cpp  DhuumBot.h  GuildEditor.cpp  GuildEditor.h  ItemFilter.cpp  ItemFilter.h  NotifyOnEffect.cpp  NotifyOnEffect.h  ResignMessage.cpp  ResignMessage.h  ResignReminder.cpp  ResignReminder.h  ReturnToOutpost.cpp  ReturnToOutpost.h  ShowKitUses.cpp  ShowKitUses.h  SuppressSpeechBubbles.cpp  SuppressSpeechBubbles.h  UwTimer.cpp  UwTimer.h
src/April/Utility/: ChainedSouls.cpp  ChainedSouls.h  ConsumableState.cpp  ConsumableState.h  Consumables.cpp  Consumables.h  DefaultTheme.cpp  DefaultTheme.h  DhuumsJudgement.cpp  DhuumsJudgement.h  Exit.cpp  Exit.h  FileIO.BasicTypes.cpp  FileIO.BasicTypes.h  FileIO.ConfigTypes.cpp  FileIO.ConfigTypes.h  FileIO.JsonKey.cpp  FileIO.JsonKey.h  FileIO.cpp  FileIO.h  FontAtlas.cpp  FontAtlas.h  Fonts.cpp  Fonts.h  Mouse.cpp  Mouse.h  Reaper.cpp  Reaper.h  ReducedSkillRecharge.cpp  ReducedSkillRecharge.h  SettingsWidgets.cpp  SettingsWidgets.h  TimeFormatting.cpp  TimeFormatting.h  UwTimesHistory.cpp  UwTimesHistory.h  sorted_vector.cpp  sorted_vector.h  stl.cpp  stl.h
src/GWCA/: GWCA.cpp  GWCA.hpp
src/ImGui/: ImGui.cpp  ImGui.hpp
